<resources>
    <string name="app_name">BMI</string>
    <string name="your_weight">Your weight</string>
    <string name="your_height">Your height</string>
    <string name="calculate_my_bmi">Calculate my BMI</string>
    <string name="result">Result</string>
    <string name="insert_your_weight">Insert your weight</string>
    <string name="insert_your_height">insert your height</string>
    <string name="_insert_your_height">Insert your height</string>
</resources>